manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ysmedi
  labels:
    app: ysmedi
    service.fastlane.co.kr/name: ysmedi
spec:
  selector:
    app: ysmedi
    service.fastlane.co.kr/name: ysmedi
